--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<script src="https://kit.fontawesome.com/5fda33e67e.js" crossorigin="anonymous"></script>
 	</head>
 	<body class="is-preload">
 
@@ -42,7 +43,7 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<div class="logo"><span class="icon fa-gem"></span></div>
+							<div class="logo"><span class="icon"><i class="fa-solid fa-code"></i></span></div>
 							<i class="fa-solid fa-window"></i>
 							<h2>Daleth Mountjoy</h2>
 							<p>My portfolio of some projects I've been working on</a></p>
@@ -55,7 +56,7 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+									<a href="movie_watch_list.html" class="image"><img src="images/pic01.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Movie Watch List App</h2>
 										<p>An app to create a list of movies you want to watch. You can add and remove them from your list, and the list is stored in local storage.</p>
@@ -67,7 +68,7 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="instant_game.html" class="image"><img src="images/pic02.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Instant Game Generator</h2>
 										<p>A random generator written in python to automatically generate a setting and a plot for someone creating a table top RPG game.</p>
