updating storage structure to allow for easier changes to be made to the watchlist app

--- a/movie_watch_list.html
+++ b/movie_watch_list.html
@@ -57,9 +57,9 @@
 
 									<section class="features">
 										<article>
-											<a href="watchlist_app.html" class="image"><img src="images/pic04.jpg" alt="" /></a>
+											<a href="/dalethmountjoy.github.io/watchlist/watchlist_app.html" class="image"><img src="images/pic04.jpg" alt="" /></a>
 											<h3 class="major">See it in action</h3>
-											<a href="watchlist_app.html" class="special">Click here</a>
+											<a href="/dalethmountjoy.github.io/watchlist/watchlist_app.html" class="special">Click here</a>
 										</article>
 										<article>
 											<a href="https://github.com/DalethMountjoy/Movie-Watchlist-App" class="image"><img src="images/pic05.jpg" alt="" /></a>
