--- a/watchlist/watchlist_app.html
+++ b/watchlist/watchlist_app.html
@@ -17,7 +17,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
     <link rel="stylesheet" href="https://bootswatch.com/4/yeti/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="stylesheet" href="/dalethmountjoy.github.io/watchlist/styles.css">
     <title>Movies Database App</title>
 </head>
 <body>
@@ -68,6 +68,6 @@
     </div>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    <script src="/assets/js/script.js"></script>
+    <script src="/dalethmountjoy.github.io/watchlist/script.js"></script>
 </body>
 </html>
