--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
-								<li><a href="movie_watch_list.html">Movie Watch List</a></li>
+								<li><a href="/dalethmountjoy.github.io/watchlist/watchlist_app.html">Movie Watch List</a></li>
 								<li><a href="instant_game.html">Instant Game</a></li>
 								<li><a href="elements.html">Elements</a></li>
 							</ul>
@@ -60,7 +60,7 @@
 									<div class="content">
 										<h2 class="major">Movie Watch List App</h2>
 										<p>An app to create a list of movies you want to watch. You can add and remove them from your list, and the list is stored in local storage.</p>
-										<a href="movie_watch_list.html" class="special">Learn more</a>
+										<a href="/dalethmountjoy.github.io/watchlist/watchlist_app.html" class="special">Try it out</a>
 									</div>
 								</div>
 							</section>
