--- a/instant_game.html
+++ b/instant_game.html
@@ -31,7 +31,7 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
-								<li><a href="movie_watch_list.html">Movie Watch List</a></li>
+								<li><a href="/dalethmountjoy.github.io/watchlist/watchlist_app.html">Movie Watch List</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
