updating some of the UI on the watch app. changed table to have gradient background. changed heading of the page to 'movies to watch', added some padding on add movie button

--- a/watchlist/watchlist_app.html
+++ b/watchlist/watchlist_app.html
@@ -26,7 +26,7 @@
             <h1 class="display-4 text-center">
                 <ion-icon class="video-icon" name="videocam-outline"></ion-icon>
                 <br>
-                <span class="header1">Movie </span><span class="text-primary">Database </span><span class="header1">List</span>
+                <span class="header1">Movies </span><span class="text-primary">To </span><span class="header1">Watch </span>
             </h1>
             
         </div>
@@ -34,6 +34,7 @@
             <div class="formvalue">
                 <form id="movie-form">
                     <h2 class="formheading">Add a Movie</h2>
+                    <h2 class="formheading">to your list</h2>
                     <div class="inputbox">
                         <ion-icon name="color-filter-outline"></ion-icon>
                         <input type="text" name="" id="title">
@@ -53,8 +54,8 @@
                 </form>
             </div>
         </div>
-        <div>
-        <table class="table table-striped mt-5">
+    <div>
+    <table class="table table-borderless table-condensed table-hover">
     <thead>
         <tr>
             <th>Title</th>
