--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 									<div class="content">
 										<h2 class="major">Movie Watch List App</h2>
 										<p>An app to create a list of movies you want to watch. You can add and remove them from your list, and the list is stored in local storage.</p>
-										<a href="{{ site.baseurl }}/dalethmountjoy.github.io/watchlist/watchlist_app.html" class="special">Try it out</a>
+										<a href="https://dalethmountjoy.github.io/watchlist/watchlist_app.html" class="special">Try it out</a>
 									</div>
 								</div>
 							</section>
