--- a/watchlist/watchlist_app.html
+++ b/watchlist/watchlist_app.html
@@ -7,6 +7,9 @@
         update the code to fix the table
         get a new dang background image / theme / UI design
         figure out how to make the views responsive
+        adding a way to reorganize the movie list
+        changing the fields of the form
+            title - streaming service (where to watch) - date added
 -->
 
 <!DOCTYPE html>
@@ -18,15 +21,13 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
     <link rel="stylesheet" href="https://bootswatch.com/4/yeti/bootstrap.min.css">
     <link rel="stylesheet" href="../watchlist/styles.css">
-    <title>Movies Database App</title>
+    <title>Movies Watchlist</title>
 </head>
 <body>
     <section>
         <div class="container mt=4">
             <h1 class="display-4 text-center">
-                <ion-icon class="video-icon" name="videocam-outline"></ion-icon>
-                <br>
-                <span class="header1">Movies </span><span class="text-primary">To </span><span class="header1">Watch </span>
+                <span class="header1">Movie Watchlist</span>
             </h1>
             
         </div>
@@ -34,27 +35,28 @@
             <div class="formvalue">
                 <form id="movie-form">
                     <h2 class="formheading">Add a Movie</h2>
-                    <h2 class="formheading">to your list</h2>
                     <div class="inputbox">
-                        <ion-icon name="color-filter-outline"></ion-icon>
-                        <input type="text" name="" id="title">
+                        <ion-icon class="input-icon" name="color-filter-outline"></ion-icon>
+                        <input class="input-title" type="text" name="" id="title">
                         <label>Title</label>
                     </div>
                     <div class="inputbox">
-                        <ion-icon name="megaphone-outline"></ion-icon>
-                        <input type="text" name="" id="director">
+                        <ion-icon class="input-icon" name="megaphone-outline"></ion-icon>
+                        <input class="input-title" type="text" name="" id="director">
                         <label>Director</label>
                     </div>
                     <div class="inputbox">
-                        <ion-icon name="calendar-clear-outline"></ion-icon>
-                        <input type="text" name="" id="year">
+                        <ion-icon class="input-icon" name="calendar-clear-outline"></ion-icon>
+                        <input class="input-title" type="text" name="" id="year">
                         <label>Year</label>
                     </div>
                     <button type="submit">Add Movie</button>
                 </form>
             </div>
         </div>
-    <div>
+        <!-- add a title here above the table. something like YOUR LIST-->
+    <div class="list">
+        <h2>What to Watch</h2>
     <table class="table table-borderless table-condensed table-hover">
     <thead>
         <tr>
