just some notes added to html

--- a/watchlist/watchlist_app.html
+++ b/watchlist/watchlist_app.html
@@ -6,10 +6,19 @@
     <to improve>
         update the code to fix the table
         get a new dang background image / theme / UI design
-        figure out how to make the views responsive
-        adding a way to reorganize the movie list
-        changing the fields of the form
-            title - streaming service (where to watch) - date added
+        figure out how to make the views responsive (WHAT DID I MEAN BY THIS? 4.5.23)
+        JS UPDATES TO DO :
+            adding a way to reorganize the movie list
+            changing the fields of the form:
+                title - streaming service (where to watch) - date added
+        Another idea -
+            can the card flip around to reveal the list?
+            2 buttons at the bottom -- add a movie / show list
+                update buttons (expanding? some animation?)
+                dig into this codepen to try to recreate
+                https://codepen.io/team/jotform/pen/XWmqoMp
+            
+
 -->
 
 <!DOCTYPE html>
