updated the list categories again - this time added genre and removed date. Also changed the button to move on hover and added another default movie to the js

--- a/watchlist/watchlist_app.html
+++ b/watchlist/watchlist_app.html
@@ -56,11 +56,11 @@
                         <label>Where to Watch</label>
                     </div>
                     <div class="inputbox">
-                        <ion-icon class="input-icon" name="calendar-clear-outline"></ion-icon>
-                        <input class="input-title" type="text" name="" id="date">
-                        <label>Date Added to List</label>
+                        <ion-icon class="input-icon" name="finger-print-outline"></ion-icon>
+                        <input class="input-title" type="text" name="" id="genre">
+                        <label>Genre</label>
                     </div>
-                    <button type="submit">Add Movie</button>
+                    <button class="btn" type="submit">Add Movie</button>
                 </form>
             </div>
         </div>
@@ -72,7 +72,7 @@
         <tr>
             <th>Title</th>
             <th>Streaming</th>
-            <th>Date Added</th>
+            <th>Genre</th>
             <th></th>
         </tr>
     </thead>
