added new logo from Em

--- a/watchlist/watchlist_app.html
+++ b/watchlist/watchlist_app.html
@@ -35,10 +35,11 @@
 </head>
 <body>
     <section>
-        <div class="container mt=4">
-            <h1 class="display-4 text-center">
+        <div>
+            <img class ="img-logo" src="../images/mwl_logo.png" alt="">
+            <!-- <h1 class="display-4 text-center">
                 <span class="header1">Movie Watchlist</span>
-            </h1>
+            </h1> -->
             
         </div>
         <div class="formbox">
